# crewai-artigo-wiki-generator

./: .env  .gitignore  README.md  artigo_Games.json  artigo_Saúde.json  requirements.txt  script-start.py  start-api-linux.sh  start-api.bat  temp_md_converter.py
artigos-gerados/: Artigo_Final.json  Artigo_Final.md  Versão_preliminar.md
artigos-gerados/edicao-final/: A Importância da Conservação da Biodiversidade nos Rios Neotropicais_ABNT.md  A Viagem ao Longo da História da Saúde Do Renascimento ao Século XXI_ABNT.md
artigos-gerados/json/: artigo_Saúde.json
crewai-artigo-wiki-generator/: README.md  script-start.py  start-api.bat
crewai-artigo-wiki-generator/crewai_artigo_wiki_generator/src/crewai_artigo_wiki_generator/: __init__.py  crew.py
crewai-artigo-wiki-generator/crewai_artigo_wiki_generator/src/crewai_artigo_wiki_generator/config/: tasks.yaml
crewai_artigo_wiki_generator/: README.md  article_final.md  pyproject.toml  report.md
crewai_artigo_wiki_generator/src/crewai_artigo_wiki_generator/: article_final.md  crew.py  main.py  report.md
crewai_artigo_wiki_generator/src/crewai_artigo_wiki_generator/artigos-gerados/: Artigo_Final.md  Versão_preliminar.md
crewai_artigo_wiki_generator/src/crewai_artigo_wiki_generator/config/: agents.yaml  tasks.yaml
crewai_artigo_wiki_generator/src/crewai_artigo_wiki_generator/models/: __init__.py  article_model.py
crewai_artigo_wiki_generator/src/crewai_artigo_wiki_generator/tests/: test_generate_article.py
crewai_artigo_wiki_generator/src/crewai_artigo_wiki_generator/tools/: wikipedia_tool.py
(+3 files in other folders)
