[project]
name = "crewai_artigo_wiki_generator"
version = "0.1.0"
description = "crewai-artigo-wiki-generator using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0"
]

[project.scripts]
crewai_artigo_wiki_generator = "crewai_artigo_wiki_generator.main:run"
run_crew = "crewai_artigo_wiki_generator.main:run"
train = "crewai_artigo_wiki_generator.main:train"
replay = "crewai_artigo_wiki_generator.main:replay"
test = "crewai_artigo_wiki_generator.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
